# agent-for-airflow

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TOOLS.md  WORKFLOWS.md  docker-compose.yml  pyproject.toml
app/: agent.py  airflow_client.py  app.py  config.py  parser.py
app/airflow/: client.py
app/airflow/tools/: read.py  write.py
app/handlers/: alert.py  reply.py
app/llm/: base.py  claude.py  factory.py  gemini.py  openai.py
app/tools/: read.py  write.py
dags/: example_pipeline.py
slack/: agent.py  app.py  parser.py  store.py
slack/handlers/: alert.py  reply.py
slack/llm/: claude.py  factory.py  gemini.py  openai.py
